--- a/index.html
+++ b/index.html
@@ -110,12 +110,14 @@
               <div class="slide-item">
                 <img src="img/champion/cp_02.png">
               </div>
-              <div class="slide-item">
+              <div class="slide-item hide">
                 <img src="img/champion/cp_03.png">
               </div>
-              <div class="slide-item">
+              <div class="slide-item hide">
                 <img src="img/champion/cp_04.png">
               </div>
+              <div class="control prev" onclick="hideSlideLeft()">&#10094;</div>
+              <div class="control next" onclick="hideSlideRight()">&#10095;</div>
             </div>
           </div>
         </div>        
