--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       <div class="body-content" id="dapp">
         
       </div>
-      <div class="body-content auto-scroll" id="gamePlay" data="id_content_gameplay">
-        <div class="content-gameplay" id ="id_content_gameplay">
+      <div class="body-content" id="gamePlay" data="id_content_gameplay">
+        <div class="content-gameplay reveal" id ="id_content_gameplay">
           <div class="gameplay-header">
             <h2>GAMEPLAY</h2>
           </div>
@@ -122,8 +122,8 @@
           </div>
         </div>        
       </div>
-      <div class="body-content auto-scroll" id="mobaEsport" data="id_content_mobaEsport">
-        <div class="content-mobaesport" id ="id_content_mobaEsport">
+      <div class="body-content" id="mobaEsport" data="id_content_mobaEsport">
+        <div class="content-mobaesport reveal" id ="id_content_mobaEsport">
           <div>Moba Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -137,8 +137,8 @@
           <div>Moba Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="nftsItem" data="id_content_nftsItem">
-        <div class="content-nft" id ="id_content_nftsItem">
+      <div class="body-content" id="nftsItem" data="id_content_nftsItem">
+        <div class="content-nft reveal" id ="id_content_nftsItem">
           <div>NFT Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -153,8 +153,8 @@
         </div>
       </div>
       </div>
-      <div class="body-content auto-scroll" id="coinToken" data="id_content_coinToken">
-        <div class="content-token" id ="id_content_coinToken">
+      <div class="body-content" id="coinToken" data="id_content_coinToken">
+        <div class="content-token reveal" id ="id_content_coinToken">
           <div>zuki Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -168,8 +168,8 @@
           <div>zuki Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="roadMap"  data="id_content_roadMap">
-        <div class="content-roadmap" id ="id_content_roadMap">
+      <div class="body-content" id="roadMap"  data="id_content_roadMap">
+        <div class="content-roadmap reveal" id ="id_content_roadMap">
           <div>roadMap Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -183,8 +183,8 @@
           <div>roadMap Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="teams" data="id_content_teams">
-        <div class="content-team" id ="id_content_teams">
+      <div class="body-content" id="teams" data="id_content_teams">
+        <div class="content-teams reveal" id ="id_content_teams">
           <div>teams Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -198,8 +198,8 @@
           <div>teams Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="advisors" data="id_content_advisors">
-        <div class="content-nft" id ="id_content_advisors">
+      <div class="body-content" id="advisors" data="id_content_advisors">
+        <div class="content-advisors reveal" id ="id_content_advisors">
           <div>advisors Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -213,8 +213,8 @@
           <div>advisors Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="backersPartners" data="id_content_backersPartners">
-        <div class="content-nft" id ="id_content_backersPartners">
+      <div class="body-content" id="backersPartners" data="id_content_backersPartners">
+        <div class="content-backersPartners reveal" id ="id_content_backersPartners">
           <div>backers Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -228,8 +228,8 @@
           <div>backers Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="document" data="id_content_document">
-        <div class="content-nft" id ="id_content_document">
+      <div class="body-content" id="document" data="id_content_document">
+        <div class="content-document reveal" id ="id_content_document">
           <div>document Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
@@ -243,8 +243,8 @@
           <div>document Esport</div>
         </div>
       </div>
-      <div class="body-content auto-scroll" id="contactUs" data="id_content_contactUs">
-        <div class="content-nft" id ="id_content_contactUs">
+      <div class="body-content" id="contactUs" data="id_content_contactUs">
+        <div class="content-contactUs reveal" id ="id_content_contactUs">
           <div>contant Esport</div>
           <div>Moba Esport</div>
           <div>Moba Esport</div>
