--- a/index.html
+++ b/index.html
@@ -310,8 +310,8 @@
           <div class="teams-slide">
             <div class="teams-slide-item">
               <img src="img/coreteam/item1.png">
-              <div class="item-info-title">DAN NGO</div>
-              <div class="item-info-position">CEO</div>  
+              <span class="item-info-title">DAN NGO</span>
+              <span class="item-info-position">CEO</span>  
             </div>
             <div class="teams-slide-item">
               <img src="img/coreteam/item1.png">
