--- a/index-change.html
+++ b/index-change.html
@@ -7,12 +7,12 @@
       <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@400;600&amp;display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/content-change.css?v=1.10">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <meta name="description" content="Zuki Moba is a MOBA E-sport Play to earn NFTs Game based on blockchain.">
-      <meta name="twitter:image:src" content="./logo.png?v=1.2">
-      <meta name="twitter:site" content="@ZukiMoba">
+      <meta name="description" content="CritterLand is a E-sport Play to earn NFTs Game based on blockchain.">
+      <meta name="twitter:image:src" content="img/logo.png?v=1.2">
+      <meta name="twitter:site" content="@CritterLand">
       <meta name="twitter:card" content="summary">
-      <meta name="twitter:title" content="Zuki Moba">
-      <meta name="twitter:description" content="Zuki Moba is a MOBA E-sport Play to earn NFTs Game based on blockchain.">
+      <meta name="twitter:title" content="CritterLand">
+      <meta name="twitter:description" content="CritterLand is a E-sport Play to earn NFTs Game based on blockchain.">
    </head>
    <body class="scrollbar">
       <!--header-->
@@ -48,32 +48,79 @@
                   </div>
                   <!--header contract-->
                   <div class="header-info-token" id="id-header-info-token">
-                    <p>Critterland Contract address: 
+                     <p>Critterland Contract address: 
                         <a href="https://bscscan.com/token/0xE81257d932280AE440B17AFc5f07C8A110D21432" target="_blank" rel="noreferrer">
                         0xE81257d932280AE440B17AFc5f07C8A110D21432
                         </a>
-                    </p>
-                   </div>
-                   <!--header contract-->
+                     </p>
+                  </div>
+                  <!--header contract-->
                </div>
-               
                <!--header desktop-->
             </div>
             <!--header-->
             <!--content home-->
             <div class="content-home">
-                <img src="img/item/CRT-01.png" class="ctr ctr_01 inactiveLeft">
-                <img src="img/item/CRT-02.png" class="ctr ctr_02 inactiveLeft">
-                <img src="img/item/CRT-03.png" class="ctr ctr_03 inactiveLeft">
-                <img src="img/item/CRT-04.png" class="ctr ctr_04 inactiveLeft">
-                <img src="img/item/CRT-05.png" class="ctr ctr_05 inactiveLeft">
-                <img src="img/item/CRT-06.png" class="ctr ctr_06 inactiveRight">
-                <img src="img/item/CRT-07.png" class="ctr ctr_07 inactiveRight">
-                <img src="img/item/CRT-08.png" class="ctr ctr_08 inactiveRight">
+               <img src="img/item/CRT-01.png" class="homectr_01 inactiveLeft ctr">
+               <img src="img/item/CRT-02.png" class="homectr_02 inactiveLeft ctr">
+               <img src="img/item/CRT-03.png" class="homectr_03 inactiveLeft ctr">
+               <img src="img/item/CRT-04.png" class="homectr_04 inactiveLeft ctr">
+               <img src="img/item/CRT-05.png" class="homectr_05 inactiveLeft ctr">
+               <img src="img/item/CRT-06.png" class="homectr_06 inactiveRight ctr">
+               <img src="img/item/CRT-07.png" class="homectr_07 inactiveRight ctr">
+               <img src="img/item/CRT-08.png" class="homectr_08 inactiveRight ctr">
             </div>
             <!--content home-->
          </div>
          <!--body home-->
+         <!--body mobaEsport-->
+         <div class="body-content" id="mobaEsport" data="id_content_mobaEsport">
+            <div class="content-mobaesport reveal" id ="id_content_mobaEsport">
+               <h2>MOBA ESPORT</h2>
+               <div class="mobaesport-play">PLAY TO EARN NFTS</div>
+               <div class="mobaesport-content">
+                  <h3>Critterland is a blockchain game platform. We make blockchain NFTs.</h3>
+               </div>
+               <div class="mobaesport-video">
+                  <img src="img/i-phone.png" alt="">
+               </div>
+            </div>
+            <img src="img/item/CRT-02.png" class="mobactr_02 inactiveRight ctr">
+            <img src="img/item/CRT-04.png" class="mobactr_04 inactiveRight ctr">
+
+            <img src="img/logos/logo.png" class="mobaIcon_1">
+            <img src="img/logos/logo.png" class="mobaIcon_2">
+            <img src="img/logos/logo.png" class="mobaIcon_3">
+         </div>
+         <!--body mobaEsport-->
+
+         <!--body gamePlay-->
+         <div class="body-content" id="gamePlay" data="id_content_gameplay">
+            <div class="content-gameplay reveal" id ="id_content_gameplay">
+               <div class="gameplay-header">
+                  <h2>GAME <span>PLAY</span></h2>
+               </div>               
+               <div class="gameplay-slide">
+                  <div class="slide-menu">
+                     <div class="slide-item">
+                        <img src="img/champion/cp_01.png">
+                     </div>
+                     <div class="slide-item">
+                        <img src="img/champion/cp_02.png">
+                     </div>
+                     <div class="slide-item hide">
+                        <img src="img/champion/cp_03.png">
+                     </div>
+                     <div class="slide-item hide">
+                        <img src="img/champion/cp_04.png">
+                     </div>
+                     <div class="control prev" onclick="hideSlideLeft()">&#10094;</div>
+                     <div class="control next" onclick="hideSlideRight()">&#10095;</div>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!--body gamePlay-->
       </div>
       <!--body-->
    </body>
