--- a/index-change.html
+++ b/index-change.html
@@ -276,6 +276,30 @@
       <!--body backersPartners-->
       </div>
       <!--body-->
+      <!--footer-->
+      <div class="footer">
+         <div class="mobile">
+            <div class="footer-menu">
+               <a class="footer-icon" href="#">
+                  <div class="footer-item icon">
+                     <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+                  </div>
+                  <div class="footer-item label">PANCAKESWAP</div>
+               </a>
+               <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
+                  <div class="footer-item coin">CIL: $0.05</div>
+               </a>
+            </div>
+         </div>
+         <div class="desktop">
+         </div>
+         <div class="hide" id="btn-up" onclick="topFunction()">
+            <svg viewBox="64 64 896 896" focusable="false" data-icon="up" width="1em" height="1em" fill="currentColor" aria-hidden="true">
+               <path d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"></path>
+            </svg>
+         </div>
+      </div>
+      <!--footer-->
    </body>
    <script src="js/jquery.min.js?v=1.10"></script>
    <script src="js/min.js?v=1.10"></script>
