--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                   <div class="footer-item label">PANCAKESWAP</div>
                </a>
                <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
-                  <div class="footer-item coin">ZUKI: $0.05</div>
+                  <div class="footer-item coin">CIL: $0.05</div>
                </a>
             </div>
          </div>
