--- a/index-change.html
+++ b/index-change.html
@@ -13,6 +13,21 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="CritterLand">
       <meta name="twitter:description" content="CritterLand is a E-sport Play to earn NFTs Game based on blockchain.">
+
+   <link rel="apple-touch-icon" sizes="57x57" href="/critterland-landpage-pg/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="/critterland-landpage-pg/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="/critterland-landpage-pg/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="/critterland-landpage-pg/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="/critterland-landpage-pg/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="/critterland-landpage-pg/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="/critterland-landpage-pg/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="/critterland-landpage-pg/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/critterland-landpage-pg/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="/critterland-landpage-pg/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/critterland-landpage-pg/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="/critterland-landpage-pg/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/critterland-landpage-pg/favicon-16x16.png">
+
    </head>
    <body class="scrollbar">
       <!--header-->
@@ -259,7 +274,7 @@
                         <div class="roadmap-des" >Game Module Upgrade</div>
                         <div class="roadmap-des" >Global E – sport event</div>
                         <div class="roadmap-des" >GameFi system upgrade</div>
-                        <div class="roadmap-des" >Zuki Metaverse</div>
+                        <div class="roadmap-des" >Critterland Metaverse</div>
                         <div class="roadmap-des" >Multiverse</div>
                      </div>
                   </li>
@@ -278,8 +293,8 @@
       <!--body-->
       <!--footer-->
       <div class="footer">
-         <div class="mobile">
-            <div class="footer-menu">
+            <!--footer mobile-->
+            <div class="footer-menu mobile">
                <a class="footer-icon" href="#">
                   <div class="footer-item icon">
                      <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
@@ -290,9 +305,39 @@
                   <div class="footer-item coin">CIL: $0.05</div>
                </a>
             </div>
-         </div>
-         <div class="desktop">
-         </div>
+            <!--footer mobile-->
+
+            <!--footer desktop-->
+            <div class="footer-menu desktop">
+               <a class="footer-icon" href="#">
+                  <div class="footer-item icon">
+                     <img src="img/logos/logo.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+                  </div>
+                  <div class="footer-item label">TOKEN:</div>
+               </a>
+               <a class="footer-icon" href="#">
+                  <div class="footer-item icon">
+                     <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+                  </div>
+                  <div class="footer-item label">PANCAKESWAP</div>
+               </a>
+               <a class="footer-icon" href="#">
+                  <div class="footer-item icon">
+                     <img src="img/icon/CertiK.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+                  </div>
+                  <div class="footer-item label">CERTIK AUDIT</div>
+               </a>
+               <a class="footer-icon" href="#">
+                  <div class="footer-item icon">
+                     <img src="img/icon/techrate2.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+                  </div>
+                  <div class="footer-item label">TECHRATE AUDIT</div>
+               </a>
+               <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
+                  <div class="footer-item coin">CIL: $0.05</div>
+               </a>
+            </div>
+            <!--footer desktop-->
          <div class="hide" id="btn-up" onclick="topFunction()">
             <svg viewBox="64 64 896 896" focusable="false" data-icon="up" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                <path d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"></path>
