--- a/index-change.html
+++ b/index-change.html
@@ -88,6 +88,7 @@
             <!--content home-->
          </div>
          <!--body home-->
+         <!-- <img src="img/black-linear.svg"> -->
          <!--body mobaEsport-->
          <div class="body-content" id="mobaEsport" data="id_content_mobaEsport">
             <div class="content-mobaesport reveal" id ="id_content_mobaEsport">
@@ -108,7 +109,7 @@
             <img src="img/logos/logo.png" class="mobaIcon_3">
          </div>
          <!--body mobaEsport-->
-
+         <!-- <img src="img/black-linear.svg"> -->
          <!--body gamePlay-->
          <div class="body-content" id="gamePlay" data="id_content_gameplay">
             <div class="content-gameplay reveal" id ="id_content_gameplay">
@@ -136,6 +137,7 @@
             </div>
          </div>
          <!--body gamePlay-->
+         <!-- <img src="img/black-linear.svg"> -->
          <!--body coinToken-->
          <div class="body-content" id="coinToken" data="id_content_coinToken">
             <div class="content-token reveal" id ="id_content_coinToken">
@@ -146,6 +148,7 @@
             </div>
          </div>
          <!--body coinToken-->
+         <!-- <img src="img/black-linear.svg"> -->
          <!--body roadMap-->
          <div class="body-content" id="roadMap"  data="id_content_roadMap">
             <div class="content-roadmap reveal" id ="id_content_roadMap">
@@ -282,6 +285,7 @@
             </div>
          </div>
          <!--body roadMap-->
+         <!-- <img src="img/black-linear.svg"> -->
          <!--body backersPartners-->
          <div class="body-content" id="backersPartners" data="id_content_backersPartners">
          <div class="content-backersPartners reveal" id ="id_content_backersPartners">
