--- a/index-change.html
+++ b/index-change.html
@@ -13,21 +13,19 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="CritterLand">
       <meta name="twitter:description" content="CritterLand is a E-sport Play to earn NFTs Game based on blockchain.">
-
-   <link rel="apple-touch-icon" sizes="57x57" href="/critterland-landpage-pg/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/critterland-landpage-pg/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/critterland-landpage-pg/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/critterland-landpage-pg/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/critterland-landpage-pg/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/critterland-landpage-pg/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/critterland-landpage-pg/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/critterland-landpage-pg/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/critterland-landpage-pg/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192"  href="/critterland-landpage-pg/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/critterland-landpage-pg/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/critterland-landpage-pg/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/critterland-landpage-pg/favicon-16x16.png">
-
+      <link rel="apple-touch-icon" sizes="57x57" href="/critterland-landpage-pg/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/critterland-landpage-pg/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/critterland-landpage-pg/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/critterland-landpage-pg/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/critterland-landpage-pg/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/critterland-landpage-pg/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/critterland-landpage-pg/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/critterland-landpage-pg/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/critterland-landpage-pg/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="/critterland-landpage-pg/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/critterland-landpage-pg/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/critterland-landpage-pg/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/critterland-landpage-pg/favicon-16x16.png">
    </head>
    <body class="scrollbar">
       <!--header-->
@@ -60,11 +58,42 @@
                            <a href="#roadMap" class="right-info"><i class="fa fa-telegram" aria-hidden="true"></i></a>
                         </div>
                      </div>
-                  </div>                 
+                  </div>
                </div>
                <!--header desktop-->
+               <!--header mobile-->
+               <div class="mobile">
+                  <a href="/">
+                     <img src="img/logos/logo.png" alt="Image logo" class="logo-game pointer" id="id_mobile_icon">
+                  </a>
+                  <div class="fa fa-bars pointer menu-icon" id="id_mobile_open_menu" data="id_mobile_menu_bar"></div>
+                  <div class="menu-bar close" id="id_mobile_menu_bar">
+                     <a href="/">
+                        <img src="img/logos/logo.png" alt="Image logo" class="logo-game pointer">
+                     </a>
+                     <img src="img/icon/close.png" alt="Close button" class="float-right menu-icon-close pointer" id="id_mobile_close_menu" data="id_mobile_menu_bar">
+                     <div class="menu-item scrollbar">     
+                        <a href="#home" class="hide-mobile-menu" data="id_mobile_menu_bar">HOME</a>
+                        <a href="#mobaEsport" class="hide-mobile-menu">OVERVIEW</a>
+                        <a href="#gamePlay" class="hide-mobile-menu">FEATURE</a>
+                        <a href="#coinToken" class="hide-mobile-menu">TOKENOMICS</a>
+                        <a href="#backersPartners" class="hide-mobile-menu">PARTNER</a>
+                        <a href="#roadMap" class="hide-mobile-menu">WHITEPAGER</a>
+                        <a href="#teams" class="hide-mobile-menu">
+                           <i class="fa fa-medium" aria-hidden="true"></i>
+                        </a>
+                        <a href="#advisors" class="hide-mobile-menu">
+                           <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="#backersPartners" class="hide-mobile-menu">
+                           <i class="fa fa-telegram" aria-hidden="true"></i>
+                        </a>
+                     </div>
+                  </div>
+               </div>
+               <!--header mobile-->
                <!--header contract-->
-                <div class="header-info-token" id="id-header-info-token">
+               <div class="header-info-token" id="id-header-info-token">
                   <p>Critterland Contract address: 
                      <a href="https://bscscan.com/token/0xE81257d932280AE440B17AFc5f07C8A110D21432" target="_blank" rel="noreferrer">
                      0xE81257d932280AE440B17AFc5f07C8A110D21432
@@ -103,7 +132,6 @@
             </div>
             <img src="img/item/CRT-02.png" class="mobactr_02 inactive right ctr">
             <img src="img/item/CRT-04.png" class="mobactr_04 inactive right ctr">
-
             <img src="img/logos/logo.png" class="mobaIcon_1">
             <img src="img/logos/logo.png" class="mobaIcon_2">
             <img src="img/logos/logo.png" class="mobaIcon_3">
@@ -115,7 +143,7 @@
             <div class="content-gameplay reveal" id ="id_content_gameplay">
                <div class="gameplay-header">
                   <h2>GAME <span>PLAY</span></h2>
-               </div>               
+               </div>
                <div class="gameplay-slide">
                   <div class="slide-menu">
                      <div class="slide-item">
@@ -288,60 +316,59 @@
          <!-- <img src="img/black-linear.svg"> -->
          <!--body backersPartners-->
          <div class="body-content" id="backersPartners" data="id_content_backersPartners">
-         <div class="content-backersPartners reveal" id ="id_content_backersPartners">
-            <h2>Partners</h2>
+            <div class="content-backersPartners reveal" id ="id_content_backersPartners">
+               <h2>Partners</h2>
+            </div>
          </div>
-      </div>
-      <!--body backersPartners-->
+         <!--body backersPartners-->
       </div>
       <!--body-->
       <!--footer-->
       <div class="footer">
-            <!--footer mobile-->
-            <div class="footer-menu mobile">
-               <a class="footer-icon" href="#">
-                  <div class="footer-item icon">
-                     <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
-                  </div>
-                  <div class="footer-item label">PANCAKESWAP</div>
-               </a>
-               <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
-                  <div class="footer-item coin">CIL: $0.05</div>
-               </a>
-            </div>
-            <!--footer mobile-->
-
-            <!--footer desktop-->
-            <div class="footer-menu desktop">
-               <a class="footer-icon" href="#">
-                  <div class="footer-item icon">
-                     <img src="img/logos/logo.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
-                  </div>
-                  <div class="footer-item label">TOKEN:</div>
-               </a>
-               <a class="footer-icon" href="#">
-                  <div class="footer-item icon">
-                     <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
-                  </div>
-                  <div class="footer-item label">PANCAKESWAP</div>
-               </a>
-               <a class="footer-icon" href="#">
-                  <div class="footer-item icon">
-                     <img src="img/icon/CertiK.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
-                  </div>
-                  <div class="footer-item label">CERTIK AUDIT</div>
-               </a>
-               <a class="footer-icon" href="#">
-                  <div class="footer-item icon">
-                     <img src="img/icon/techrate2.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
-                  </div>
-                  <div class="footer-item label">TECHRATE AUDIT</div>
-               </a>
-               <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
-                  <div class="footer-item coin">CIL: $0.05</div>
-               </a>
-            </div>
-            <!--footer desktop-->
+         <!--footer mobile-->
+         <div class="footer-menu mobile">
+            <a class="footer-icon" href="#">
+               <div class="footer-item icon">
+                  <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+               </div>
+               <div class="footer-item label">PANCAKESWAP</div>
+            </a>
+            <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
+               <div class="footer-item coin">CIL: $0.05</div>
+            </a>
+         </div>
+         <!--footer mobile-->
+         <!--footer desktop-->
+         <div class="footer-menu desktop">
+            <a class="footer-icon" href="#">
+               <div class="footer-item icon">
+                  <img src="img/logos/logo.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+               </div>
+               <div class="footer-item label">TOKEN:</div>
+            </a>
+            <a class="footer-icon" href="#">
+               <div class="footer-item icon">
+                  <img src="img/icon/pancakeswap-cake.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+               </div>
+               <div class="footer-item label">PANCAKESWAP</div>
+            </a>
+            <a class="footer-icon" href="#">
+               <div class="footer-item icon">
+                  <img src="img/icon/CertiK.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+               </div>
+               <div class="footer-item label">CERTIK AUDIT</div>
+            </a>
+            <a class="footer-icon" href="#">
+               <div class="footer-item icon">
+                  <img src="img/icon/techrate2.png" alt="Image logo" class="footer-item pointer pancakeswap-cake">
+               </div>
+               <div class="footer-item label">TECHRATE AUDIT</div>
+            </a>
+            <a class="footer-icon" href="https://poocoin.app/tokens/0xe81257d932280ae440b17afc5f07c8a110d21432" target="_blank">
+               <div class="footer-item coin">CIL: $0.05</div>
+            </a>
+         </div>
+         <!--footer desktop-->
          <div class="hide" id="btn-up" onclick="topFunction()">
             <svg viewBox="64 64 896 896" focusable="false" data-icon="up" width="1em" height="1em" fill="currentColor" aria-hidden="true">
                <path d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"></path>
