--- a/index-change.html
+++ b/index-change.html
@@ -50,7 +50,7 @@
                      <div class="item-right">
                         <div class="item-right-left">
                            <a href="#backersPartners">PARTNER</a><!--
-                              --><a href="#roadMap">WHITEPAGER</a>
+                              --><a href="#roadMap">ROADMAP</a>
                         </div>
                         <div class="item-right-right">
                            <a href="#roadMap" class="right-info"><i class="fa fa-medium" aria-hidden="true"></i></a>
@@ -78,7 +78,7 @@
                         <a href="#gamePlay" class="hide-mobile-menu">FEATURE</a>
                         <a href="#coinToken" class="hide-mobile-menu">TOKENOMICS</a>
                         <a href="#backersPartners" class="hide-mobile-menu">PARTNER</a>
-                        <a href="#roadMap" class="hide-mobile-menu">WHITEPAGER</a>
+                        <a href="#roadMap" class="hide-mobile-menu">ROADMAP</a>
                         <a href="#teams" class="hide-mobile-menu">
                            <i class="fa fa-medium" aria-hidden="true"></i>
                         </a>
