--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <meta name="twitter:card" content="summary">
       <meta name="twitter:title" content="CritterLand">
       <meta name="twitter:description" content="CritterLand is a E-sport Play to earn NFTs Game based on blockchain.">
-      <link rel="apple-touch-icon" sizes="57x57" href="/critterland-landpage-pg/apple-icon-57x57.png">
-      <link rel="apple-touch-icon" sizes="60x60" href="/critterland-landpage-pg/apple-icon-60x60.png">
-      <link rel="apple-touch-icon" sizes="72x72" href="/critterland-landpage-pg/apple-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="76x76" href="/critterland-landpage-pg/apple-icon-76x76.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="/critterland-landpage-pg/apple-icon-114x114.png">
-      <link rel="apple-touch-icon" sizes="120x120" href="/critterland-landpage-pg/apple-icon-120x120.png">
-      <link rel="apple-touch-icon" sizes="144x144" href="/critterland-landpage-pg/apple-icon-144x144.png">
-      <link rel="apple-touch-icon" sizes="152x152" href="/critterland-landpage-pg/apple-icon-152x152.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="/critterland-landpage-pg/apple-icon-180x180.png">
-      <link rel="icon" type="image/png" sizes="192x192" href="/critterland-landpage-pg/android-icon-192x192.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="/critterland-landpage-pg/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="96x96" href="/critterland-landpage-pg/favicon-96x96.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="/critterland-landpage-pg/favicon-16x16.png">
+      <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
    </head>
    <body class="scrollbar">
       <!--header-->
